--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>가카 마켓
-  </title>
+  <title>가카 마켓</title>
 </head>
 
 <body>
